# libutils

./: .gitignore  CMakeLists.txt  README.md
c/inc/: fifo.h  fifo_utils.h  foo.h  protocal_utils.h  uart_utils.h
c/src/: fifo.c  fifo_utils.c  foo.c  protocal_utils.c  uart_utils.c
c/template/: stm32_uart_ll.c  stm32_uart_ll.h
test/src/: fifo.cpp  foo.cpp  protocal.cpp  uart.cpp
